# AI-Development-Workspace

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  AI-Development-Workspace.code-workspace  AI-Workspace.code-workspace  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.md.bak  SECURITY.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AI_DOCSTRINGS.md  AI_GOVERNANCE_RULES.md  AI_PROMPTING_STANDARDS.md  COPILOT_USAGE.md  DEVELOPMENT.md  FIX_AUDIT_FINDINGS.md  LINTING_AND_CI_STANDARDS.md  PROJECT_STRUCTURE.md  RELEASE_NOTES_v0.5.0.md  SCHEMAS_AND_VALIDATION.md  STANDARDS_SCOPE.md  STATUS.md
schemas/: models.schema.json  project_config.schema.json  prompts.schema.json
scripts/: ajv-validate.mjs  audit_ai_project.py  audit_data_layout.py  audit_docs.py  audit_llm_usage.py  audit_tooling.py  fix_audit_findings.py  md-linter-workflow.ps1  migrate_prompts_from_code.py  prompt_extract.py  prompt_merge.py  run_vale.py  rz_ai_check.py  setup_project.py  update-docx.ps1  validate_config.py
templates/python/: main.py
tests/: test_audit_ai_project.py  test_audit_data_layout.py  test_audit_data_layout_cli.py  test_audit_docs.py  test_audit_llm_usage.py  test_audit_tooling.py  test_fix_audit_findings.py  test_prompt_extract.py  test_prompt_merge.py  test_rz_ai_check.py
